--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
+Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
+requests==2.31.0
+gunicorn==21.2.0
+Werkzeug==3.0.1
+python-dotenv==0.19.0
 sqlite3-api==2.0.0
-Werkzeug==2.0.1
-python-dotenv==0.19.0 
-requests==2.32.3
