--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,14 @@
 services:
   - type: web
     name: ctf-webapp
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    env: docker
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.0
       - key: PORT
-        value: 10000 
+        value: 10000
+    scaling:
+      minInstances: 1
+      maxInstances: 3
+      targetMemoryPercent: 80
+    healthCheckPath: /
+    autoDeploy: true 
