--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask-SQLAlchemy==3.1.1
 requests==2.31.0
 gunicorn==21.2.0
 Werkzeug==3.0.1
-python-dotenv==0.19.0
-sqlite3-api==2.0.0
+python-dotenv==1.0.1
+sqlite3-api
