--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
-requests==2.31.0
-gunicorn==21.2.0
-Werkzeug==3.0.1
-python-dotenv==1.0.1
+Flask
+Flask-SQLAlchemy
+requests
+gunicorn
+Werkzeug
+python-dotenv
 sqlite3-api
