--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -1,28 +1,34 @@
-name: Build and push Docker image to dockerhub
+name: Build and push Docker image to Docker Hub
 
 on:
   push:
     branches: [ "main" ]
-    
+  workflow_dispatch:  # Allows manual trigger
+
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Check out the repo
       uses: actions/checkout@v4
-
-    - name: Login to dockerhub
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-       username: ${{ secrets.DOCKERHUB_USERNAME }}
-       password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push to dockerhub
+    - name: Build and push to Docker Hub
       uses: docker/build-push-action@v5
       with:
-       context:
-       push: true
-       tags: Unknnownnn/githubaction:latest
+        context: .
+        push: true
+        tags: |
+          unknnownnn/vul-webapp:latest
+          unknnownnn/vul-webapp:${{ github.sha }}
+        cache-from: type=registry,ref=unknnownnn/vul-webapp:latest
+        cache-to: type=inline
